fix calendar cropping bug

--- a/blocks/event-info-component/event-info-component.css
+++ b/blocks/event-info-component/event-info-component.css
@@ -97,7 +97,6 @@
   right: calc(-50% + 40px);
   padding: 16px;
   width: 317px;
-  height: 286px;
   position: absolute;
   margin: auto;
   background: white;
